--- a/style.css
+++ b/style.css
@@ -162,14 +162,20 @@ body {
     flex-direction: column;
     gap: 20px;
     margin-top: 0;
+    margin-bottom: 60px;
   }
   .bullet {
     flex-direction: row;
     width: auto;
     max-width: 241px;
+    margin-top: 20px;
   }
   .footer_img {
     margin-top: 0px;
     width: 100%;
+  }
+
+  .bg_wrapper {
+    height: 120%;
   }
 }
