--- a/style.css
+++ b/style.css
@@ -107,6 +107,27 @@ body {
   width: 100%;
 }
 
+.footer {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 210px;
+}
+
+.footer_logo {
+  width: 159px;
+  height: 72px;
+}
+
+.footer_text {
+  color: white;
+  text-align: center;
+  font-family: Hind Siliguri;
+  font-size: 36px;
+  font-weight: 700;
+}
+
 @media (max-width: 571px) {
   .header {
     padding-top: 14px;
@@ -173,5 +194,14 @@ body {
 
   .bg_wrapper {
     height: 120%;
+  }
+
+  .footer {
+    margin-top: 60px;
+  }
+
+  .footer_logo {
+    width: 106px;
+    height: 48px;
   }
 }
