--- a/style.css
+++ b/style.css
@@ -129,6 +129,10 @@ body {
 }
 
 @media (max-width: 571px) {
+  body {
+    background-image: url("./img/m_bg.png");
+  }
+
   .header {
     padding-top: 14px;
     padding-bottom: 14px;
